// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot — disabled 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-gray-200 cursor-not-allowed opacity-0 absolute h-8 w-8"
        disabled={true}
        id="radio-1"
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold "
      >
        Disabled
      </span>
    </div>
  </label>
</div>
`;

exports[`snapshot — error 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-red-300 bg-white opacity-0 absolute h-8 w-8"
        id="radio-1"
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold text-red-500"
      >
        Error
      </span>
    </div>
  </label>
  <div
    className="flex mt-1 items-center space-x-1 text-red-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      This is an error
    </span>
  </div>
</div>
`;

exports[`snapshot — helptext 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white opacity-0 absolute h-8 w-8"
        id="radio-1"
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold "
      >
        Helptext
      </span>
    </div>
  </label>
  <div
    className="flex mt-1 items-center space-x-1 text-true-gray-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      This is the help text
    </span>
  </div>
</div>
`;

exports[`snapshot — vanilla + required 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white opacity-0 absolute h-8 w-8"
        id="radio-1"
        required={true}
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold "
      >
        Required *
      </span>
    </div>
  </label>
</div>
`;

exports[`snapshot — vanilla 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white opacity-0 absolute h-8 w-8"
        id="radio-1"
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold "
      >
        Vanilla
      </span>
    </div>
  </label>
</div>
`;
